[gd_scene load_steps=8 format=3 uid="uid://bed1o6q5xc3bn"]

[ext_resource type="Script" path="res://Autoloads/ScoreUI.gd" id="1_b5qqk"]
[ext_resource type="PackedScene" uid="uid://chycjurmni3pc" path="res://Objects/VictoryRect.tscn" id="2_mrtll"]
[ext_resource type="Shader" path="res://Autoloads/ScoreUIFadeIn.gdshader" id="2_pw284"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_njoen"]
resource_local_to_scene = true
shader = ExtResource("2_pw284")
shader_parameter/t = -0.01

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rakuw"]
resource_local_to_scene = true
shader = ExtResource("2_pw284")
shader_parameter/t = -0.01

[sub_resource type="Gradient" id="Gradient_v384a"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ry2q7"]
gradient = SubResource("Gradient_v384a")
fill = 1
fill_from = Vector2(1, 0.25)
fill_to = Vector2(0, 1)

[node name="ScoreUI" type="CanvasLayer" node_paths=PackedStringArray("p1_blackout", "p2_blackout", "main_menu", "quit", "end_label")]
layer = 2
visible = false
follow_viewport_enabled = true
script = ExtResource("1_b5qqk")
p1_blackout = NodePath("WinUI/VictoryRect")
p2_blackout = NodePath("WinUI/VictoryRect2")
main_menu = NodePath("WinUI/MainMenu")
quit = NodePath("WinUI/Quit")
end_label = NodePath("WinUI/WinText")

[node name="WinUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VictoryRect" parent="WinUI" instance=ExtResource("2_mrtll")]
material = SubResource("ShaderMaterial_njoen")

[node name="VictoryRect2" parent="WinUI" instance=ExtResource("2_mrtll")]
material = SubResource("ShaderMaterial_rakuw")
texture = SubResource("GradientTexture2D_ry2q7")

[node name="WinText" type="Label" parent="WinUI"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 12.0
offset_top = 22.0
offset_right = 204.0
offset_bottom = 118.0
grow_horizontal = 2
pivot_offset = Vector2(9, 9.338)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="MainMenu" type="Button" parent="WinUI"]
visible = false
self_modulate = Color(1, 1, 1, 0)
offset_left = 32.0
offset_top = 106.0
offset_right = 40.0
offset_bottom = 114.0
text = "Main Menu"

[node name="Quit" type="Button" parent="WinUI"]
visible = false
self_modulate = Color(1, 1, 1, 0)
offset_left = 178.0
offset_top = 106.0
offset_right = 220.0
offset_bottom = 137.0
text = "Quit"

[node name="ScoreUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Rally Counter" type="Label" parent="ScoreUI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 99.0
offset_right = 117.0
offset_bottom = 21.0
grow_horizontal = 2
pivot_offset = Vector2(9, 9.338)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 10
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="P1Score" type="Label" parent="ScoreUI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = -2.0
offset_bottom = 21.0
grow_horizontal = 2
pivot_offset = Vector2(9, 9.338)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 10
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="P2Score" type="Label" parent="ScoreUI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 218.0
offset_right = 236.0
offset_bottom = 21.0
grow_horizontal = 2
pivot_offset = Vector2(9, 9.338)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 10
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="WinUI/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="WinUI/Quit" to="." method="_on_quit_pressed"]
